Fixed search on mobile. Compressed, changed images

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 html {
   box-sizing: border-box;
   letter-spacing: -1px;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 400;
 }
 
@@ -28,7 +35,7 @@ h3 {
   text-align: center;
   --max-content-width: min(90vw, 800px);
   --border-radius: 25px;
-  --lrpadding: min(30px, 3.73vw)
+  --lrpadding: min(30px, 3.73vw);
 }
 
 body {
@@ -65,7 +72,7 @@ html {
   margin: 0 auto;
 }
 
-.navbarBG{
+.navbarBG {
   z-index: -1;
   opacity: 0.8;
   background-color: #ffffff33;
@@ -74,8 +81,6 @@ html {
   position: absolute;
   backdrop-filter: blur(6px);
 }
-
-
 
 .toggleCF {
   display: flex;
@@ -95,7 +100,7 @@ input[type="checkbox"] {
   display: block;
   border-radius: 100px;
   position: relative;
-  color: #FFFFFF00;
+  color: #ffffff00;
   font-size: 0px;
 }
 .toggleCF label::after {
@@ -114,7 +119,6 @@ input[type="checkbox"] {
   border-radius: 48px;
   transition: 0.3s;
 }
-
 
 input:checked + label {
   background: #999999bb;
@@ -140,7 +144,6 @@ input:checked + :after {
   background: #fff;
   border-radius: 48px;
   transition: 0.3s;
-
 }
 
 .hero {
@@ -222,7 +225,7 @@ body .temperature {
   background-color: grey;
   border: 5px solid transparent;
   border-radius: 8px;
-  background-clip: padding-box;  
+  background-clip: padding-box;
 }
 
 .hourlyForecast::-webkit-scrollbar {
@@ -233,7 +236,7 @@ body .temperature {
   background: #555;
   border: 5px solid transparent;
   border-radius: 8px;
-  background-clip: padding-box;  
+  background-clip: padding-box;
 }
 
 .hourModule {
@@ -250,7 +253,7 @@ body .temperature {
 
 .hourModule img {
   height: 64px;
-  height: clamp(2.5rem, 1.5rem + 4.444444444444445vw, 4rem); 
+  height: clamp(2.5rem, 1.5rem + 4.444444444444445vw, 4rem);
 }
 
 .hourModule * {
@@ -287,7 +290,7 @@ body .temperature {
   border-top: 1px solid #eeeeee55;
 }
 
-.dayModule > :nth-child(1){
+.dayModule > :nth-child(1) {
   width: 31%;
   text-align: left;
 }
@@ -301,8 +304,8 @@ body .temperature {
   align-items: center;
   justify-content: center;
 }
-.imgContainer img{
-  height: clamp(2.5rem, 1.5rem + 4.444444444444445vw, 4rem); 
+.imgContainer img {
+  height: clamp(2.5rem, 1.5rem + 4.444444444444445vw, 4rem);
 }
 
 .weatherBar {
@@ -313,7 +316,7 @@ body .temperature {
   min-width: 156px;
   height: 100%;
 }
-.weatherBar :nth-child(3){
+.weatherBar :nth-child(3) {
   text-align: right;
 }
 .weatherBar > h3 {
@@ -368,13 +371,21 @@ body .temperature {
   letter-spacing: -0.7px;
 }
 
-.searchBar { 
+.searchBar {
   /* CONTAINS INPUT ELEMENT AND RESULTS */
   min-width: 150px;
   flex: 0 1 350px;
   margin: 0px 12px;
   align-self: flex-start;
-  height: 30px;
+  min-height: 30px;
+}
+.unfocus {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  margin: 0px;
+  left: 0px;
+  top: 0px;
 }
 
 #searchbar {
@@ -383,7 +394,7 @@ body .temperature {
   background-color: #00000022;
   padding-left: 16px;
   width: 100%;
-  height: 100%;
+  height: 30px;
   /* background: url(/src/assets/search.svg) no-repeat scroll; */
   background-size: 23px;
   padding-right: 30px;
@@ -400,7 +411,7 @@ body .temperature {
 
 .searchBar button {
   height: 100%;
-  background-color: #FFFFFF00;
+  background-color: #ffffff00;
   display: flex;
   align-items: center;
 }
